--- a/IslahGroupInventory/ViewControls/PurchasesControl.resx
+++ b/IslahGroupInventory/ViewControls/PurchasesControl.resx
@@ -123,4 +123,7 @@
   <metadata name="purchaseItemsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>202, 17</value>
   </metadata>
+  <metadata name="PurchaseErrorProvider.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>411, 17</value>
+  </metadata>
 </root>
